--- a/src/App.css
+++ b/src/App.css
@@ -1,73 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  background-image: url("https://images.unsplash.com/photo-1518791841217-8f162f1e1131?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
-}
-.form {
-  width: 250px;
-  height: 380px;
-  background: linear-gradient(
-    to top,
-    rgba(0, 0, 0, 0.8) 50%,
-    rgba(0, 0, 0, 0.8) 50%
-  );
-  position: absolute;
-  top: 200px;
-  left: 40%;
-  transform: translate(0%, -5%);
-  border-radius: 10px;
-  padding: 25px;
-}
-
-.form h2 {
-  width: 220px;
-  font-family: sans-serif;
-  text-align: center;
-  color: #ff7200;
-  font-size: 22px;
-  background: #fff;
-  border-radius: 10px;
-  margin: 2px;
-  padding: 8px;
-}
-
-.form input {
-  width: 240px;
-  height: 35px;
-  background: transparent;
-  border-bottom: 1px solid #ff7200;
-  border-top: none;
-  border-right: none;
-  border-left: none;
-  color: #fff;
-  font-size: 15px;
-  letter-spacing: 1px;
-  margin-top: 30px;
-  font-family: sans-serif;
-}
-
-.form input:focus {
-  outline: none;
-}
-
-::placeholder {
-  color: #fff;
-  font-family: Arial;
-}
-
-.btn {
-  width: 240px;
-  height: 40px;
-  background: #ff7200;
-  border: none;
-  margin-top: 30px;
-  font-size: 18px;
-  border-radius: 10px;
-  cursor: pointer;
-  color: #fff;
-  transition: 0.4s ease;
-}
-.btn:hover {
-  background: #fff;
-  color: #ff7200;
+.header{
+  font-size: 50px;
 }
